compiler-core/lexing/tests/snapshots/lexer__block_comment_nested.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "{- {- nested! -} -}\n"
expression: snapshot
snapshot_kind: text
---
annotation : "{- {- nested! -} -}\n"
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 2, column: 1 }
     error : None
