compiler-core/lexing/tests/snapshots/lexer__char_eof.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: "'a\n"
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : CHAR
      text : "'a\n"
  position : Position { line: 1, column: 1 }
     error : Some("Unterminated character literal")

annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 2, column: 1 }
     error : None
