compiler-core/lexing/tests/snapshots/lexer__end_of_file.snap
---
source: compiler-core/lexing/tests/lexer.rs
description: ""
expression: snapshot
snapshot_kind: text
---
annotation : ""
 qualifier : ""
      kind : END_OF_FILE
      text : ""
  position : Position { line: 1, column: 1 }
     error : None
